# massa-proto

./: .gitignore  Cargo.toml  Dockerfile  INSTALL.md  README.md  buf.gen.yaml  buf.work.yaml  build.bat  build.rs  build.sh
.github/workflows/: buf.yaml  ci-cd.yaml  pull-request.yaml
doc/: abi.html  abi.md  api.html  api.md  commons.html  commons.md  index.html
proto/: README.md
proto/abis/: buf.yaml
proto/abis/massa/abi/v1/: abi.proto
proto/apis/: buf.yaml
proto/apis/massa/api/v1/: api.proto  block.proto  common.proto  endorsement.proto  execution.proto  operation.proto  private.proto  public.proto  slot.proto
proto/commons/: buf.yaml
proto/commons/massa/model/v1/: address.proto  amount.proto  block.proto  commons.proto  datastore.proto  denunciation.proto  draw.proto  endorsement.proto  execution.proto  hash.proto  node.proto  operation.proto  signature.proto  slot.proto  staker.proto  stats.proto  time.proto  versioning.proto
proto/massa/abi/v1/: abi.proto
proto/massaabis/: buf.yaml
proto/massaapis/: buf.yaml
proto/massaapis/massalabs/api/v1/: api.proto  block.proto  common.proto  endorsement.proto  execution.proto  operation.proto  slot.proto
src/: lib.rs  massa.abi.v1.rs
