[package]
name = "massa_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { version = "0.11.8", default-features = false, features = [
    "prost-derive",
] } # specify the exact version to ensure determinism
prost-types = { version = "0.11.8", default-features = false }

[build-dependencies]
prost-build = "0.11.8" # specify exact version to ensure determinism
glob = "0.3.1"

[features]
prost-build = []
